Comentario en appsettings para especificar el cambio de credenciales

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,7 @@
     "APIHost": "http://20.169.167.245:1515/",
     "Couchbase": {
         "ConnectionString": "couchbase://localhost",
+        //Credenciales del servidor local, cambiar por las que asignes
         "Username": "Solvark",
         "Password": "1234.abcd",
         "Buckets": {
